--- a/src/main/resources/languages/minijava.txt
+++ b/src/main/resources/languages/minijava.txt
@@ -1,6 +1,6 @@
 LANGUAGE_DEF
     name = minijava;
-    file_extension = java;
+    file_extension = minijava;
     single_line_comment_available = true;
     single_line_comment_style = //;
     multi_line_comment_available = true;
@@ -56,20 +56,19 @@ HIDDEN_LEXER_RULES
     whitespace, single_line_comment, multi_line_comment;
 
 GRAMMAR_RULES
-    S                           ->  MAIN_CLASS TYPE_DECLARATIONS;
-    TYPE_DECLARATIONS           ->  TYPE_DECLARATION TYPE_DECLARATIONS | TYPE_DECLARATION | EPSILON;
-    TYPE_DECLARATION            ->  CLASS_DECLARATION | CLASS_EXTENTS_DECLARATION;
+    S                           ->  MAIN_CLASS CLASS_DECLARATIONS;
+    CLASS_DECLARATIONS          ->  CLASS_DECLARATION CLASS_DECLARATIONS | EPSILON;
     CLASS_DECLARATION           ->  class_stmt identifier curly_bracket_open VAR_DECLARATIONS METHOD_DECLARATIONS curly_bracket_close;
-    CLASS_EXTENTS_DECLARATION   ->  class_stmt identifier extents_stmt identifier curly_bracket_open VAR_DECLARATIONS METHOD_DECLARATIONS curly_bracket_close;
+    CLASS_DECLARATION           ->  class_stmt identifier extents_stmt identifier curly_bracket_open VAR_DECLARATIONS METHOD_DECLARATIONS curly_bracket_close;
     MAIN_CLASS                  ->  class_stmt identifier curly_bracket_open public_stmt static_stmt void_type main_identifier
                                     bracket_open string_type square_bracket_open square_bracket_close identifier bracket_close
                                     curly_bracket_open VAR_DECLARATIONS STATEMENTS curly_bracket_close curly_bracket_close;
-    METHOD_DECLARATIONS         ->  METHOD_DECLARATIONS METHOD_DECLARATION | METHOD_DECLARATION | EPSILON;
+    METHOD_DECLARATIONS         ->  METHOD_DECLARATION METHOD_DECLARATIONS | EPSILON;
     METHOD_DECLARATION          ->  public_stmt TYPE identifier bracket_open FORMAL_PARAMETER_LIST bracket_close curly_bracket_open VAR_DECLARATIONS STATEMENTS return_stmt EXPRESSION semicolon curly_bracket_close;
     FORMAL_PARAMETER_LIST       ->  FORMAL_PARAMETER_LIST comma FORMAL_PARAMETER | FORMAL_PARAMETER | EPSILON;
     FORMAL_PARAMETER            ->  TYPE identifier;
-    VAR_DECLARATIONS            ->  VAR_DECLARATIONS VAR_DECLARATION | VAR_DECLARATION | EPSILON;
-    STATEMENTS                  ->  STATEMENTS STATEMENT | STATEMENT | EPSILON;
+    VAR_DECLARATIONS            ->  VAR_DECLARATIONS VAR_DECLARATION | EPSILON;
+    STATEMENTS                  ->  STATEMENT STATEMENTS | EPSILON;
     VAR_DECLARATION             ->  TYPE identifier semicolon;
     STATEMENT                   ->  BLOCK | ASSIGNMENT_STATEMENT | ARRAY_ASSIGNMENT_STATEMENT | IF_STATEMENT | WHILE_STATEMENT | PRINT_STATEMENT;
     BLOCK                       ->  curly_bracket_open STATEMENTS curly_bracket_close;
