Removing ambuigity in the lexer definitions of minijava

--- a/src/main/resources/languages/minijava.txt
+++ b/src/main/resources/languages/minijava.txt
@@ -14,19 +14,19 @@ LEXER_RULES
     integer_literal         =   regex([0-9]+(\.[0-9]+)?);
     true_literal            =   "true";
     false_literal           =   "false";
-    this_expression         =   "this";
-    new_expression          =   "new";
-    class_stmt              =   "class";
-    public_stmt             =   "public";
-    static_stmt             =   "static";
-    return_stmt             =   "return";
-    extents_stmt            =   "extends";
-    void_type               =   "void";
-    main_identifier         =   "main";
-    string_type             =   "String";
-    int_type                =   "int";
-    boolean_type            =   "boolean";
-    array_length_stmt       =   "length";
+    this_expression         =   regex(this(?!([a-zA-Z_0-9])));
+    new_expression          =   regex(new(?!([a-zA-Z_0-9])));
+    class_stmt              =   regex(class(?!([a-zA-Z_0-9])));
+    public_stmt             =   regex(public(?!([a-zA-Z_0-9])));
+    static_stmt             =   regex(static(?!([a-zA-Z_0-9])));
+    return_stmt             =   regex(return(?!([a-zA-Z_0-9])));
+    extents_stmt            =   regex(extends(?!([a-zA-Z_0-9])));
+    void_type               =   regex(void(?!([a-zA-Z_0-9])));
+    main_identifier         =   regex(main(?!([a-zA-Z_0-9])));
+    string_type             =   regex(String(?!([a-zA-Z_0-9])));
+    int_type                =   regex(int(?!([a-zA-Z_0-9])));
+    boolean_type            =   regex(boolean(?!([a-zA-Z_0-9])));
+    array_length_stmt       =   regex(length(?!([a-zA-Z_0-9])));
     not                     =   "!";
     bracket_open            =   "(";
     bracket_close           =   ")";
@@ -37,9 +37,9 @@ LEXER_RULES
     dot                     =   ".";
     comma                   =   ",";
     semicolon               =   ";";
-    if                      =   "if";
-    else                    =   "else";
-    while                   =   "while";
+    if                      =   regex(if(?!([a-zA-Z_0-9])));
+    else                    =   regex(else(?!([a-zA-Z_0-9])));
+    while                   =   regex(while(?!([a-zA-Z_0-9])));
     assignment              =   "=";
     plus                    =   "+";
     minus                   =   "-";
